--- a/.github/workflows/release-httpctrl.yml
+++ b/.github/workflows/release-httpctrl.yml
@@ -17,5 +17,11 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Run multi-line script
+      env:
+        HTTPCTRL_USERNAME: ${{ secrets.HTTPCTRL_USERNAME }}
+        HTTPCTRL_PASSWORD: ${{ secrets.HTTPCTRL_PASSWORD }}
+        TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
+        TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
       shell: bash
       run: ci/github-ci-release.sh
+
