--- a/.github/workflows/release-httpctrl.yml
+++ b/.github/workflows/release-httpctrl.yml
@@ -1,12 +1,13 @@
 name: release httpctrl
 
 on: [workflow_dispatch]
-    inputs:
-        requested_version:
-            description: 'Specific version that is going to be used.'
-            default: ''
-            required: false
-            type: string
+    workflow_call:
+        inputs:
+            requested_version:
+                description: 'Specific version that is going to be used.'
+                default: ''
+                required: false
+                type: string
 
 jobs:
   build:
