--- a/.github/workflows/build-httpctrl.yml
+++ b/.github/workflows/build-httpctrl.yml
@@ -21,6 +21,7 @@ jobs:
       run: ci/github-ci.sh
 
     - name: Archive artifacts
+      if: always()
       uses: actions/upload-artifact@v4
       with:
           name: SCT test reports
